# telegrambot

./: .gitignore  README.md  db.py  keyboards.py  main.py  pyproject.toml  requirements.txt  test.py  texts.py  translator.sqlite
